# anLocales

./: .gitignore  Cargo.toml  Makefile  README.md  SECURITY.md
.github/workflows/: build.yml  publish.yml
header/: anlocales.h
src/: data_format.rs  lib.rs  utils.rs
