[package]
name = "anLocales"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.190", features = ["derive"] }
chrono = "0.4.42"
serde_json = "1.0.145"
toml = "0.9.7"
nix = { version = "0.30.1", features = ["user"] }
is-admin = "0.1.4"

[profile.release]
# flags for optimization [bools]
lto = true
debug = false
# flags for optimization [strings]
opt-level = "z"
panic = "abort"
# flag for codegen enchanments [int]
codegen-units = 1